--- a/src/pages/works/index.astro
+++ b/src/pages/works/index.astro
@@ -1,19 +1,18 @@
 ---
 import { getCollection } from 'astro:content';
 import Layout from '@layouts/Default.astro';
-import BlogList from '@components/blog/BlogList.astro';
-
-const posts = await getCollection('blog').then((collection) =>
+import WorkList from '@components/works/WorkList.astro';
+const posts = await getCollection('works').then((collection) =>
   collection.reverse()
 );
 ---
 
 <Layout
-  title='Blog'
+  title='Works'
   description='Brutal Blog | On this page you can find a collection of blogposts'
   pageTitle='Brutal Blog'
 >
   <main class='bg-green p-6'>
-    <BlogList posts={posts} />
+    <WorkList posts={posts} />
   </main>
 </Layout>
