--- a/src/components/generic/RecentWorks.astro
+++ b/src/components/generic/RecentWorks.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import BlogList from '../blog/BlogList.astro';
+import WorkList from '@components/works/WorkList.astro';
 import { Card } from '@eliancodes/brutal-ui';
 import { Button } from '@eliancodes/brutal-ui';
 
@@ -10,7 +10,7 @@ interface Props {
 
 const { count } = Astro.props;
 
-const posts = await getCollection('blog').then((posts) =>
+const posts = await getCollection('works').then((posts) =>
   posts.reverse().slice(0, count ?? 3)
 );
 ---
@@ -19,15 +19,15 @@ const posts = await getCollection('blog').then((posts) =>
   <Card>
     <div class='flex justify-between items-start'>
       <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 dm-serif'>
-        Recent Blogposts
+        Recent Works
       </h2>
       <div class='hidden md:block'>
-        <Button href='/blog/'>Go to blog &rarr;</Button>
+        <Button href='/works/'>Go to works &rarr;</Button>
       </div>
       <div class='block md:hidden'>
-        <Button href='/blog/'>to blog</Button>
+        <Button href='/works/'>to works</Button>
       </div>
     </div>
-    <BlogList posts={posts} />
+    <WorkList posts={posts} />
   </Card>
 </section>
