--- a/src/components/works/WorkSummaryCard.astro
+++ b/src/components/works/WorkSummaryCard.astro
@@ -1,11 +1,11 @@
 ---
 import type { CollectionEntry } from 'astro:content';
 import { Pill } from '@eliancodes/brutal-ui';
-import SummaryCard from '../generic/SummaryCard.astro';
+import SummaryCard from '@components/generic/SummaryCard.astro';
 import { Button } from '@eliancodes/brutal-ui';
 
 interface Props {
-  post: CollectionEntry<'blog'>;
+  post: CollectionEntry<'works'>;
 }
 
 const { post } = Astro.props;
@@ -18,7 +18,7 @@ const { post } = Astro.props;
   description={post.data.description}
 >
   <div class='flex justify-end my-4'>
-    <Button href={`/blog/${post.slug}/`}>Read post &rarr;</Button>
+    <Button href={`/works/${post.slug}/`}>Read post &rarr;</Button>
   </div>
 
   <div class='hidden sm:inline-block'>
@@ -29,7 +29,7 @@ const { post } = Astro.props;
           post.data.tags.map((tag) => {
             return (
               <li>
-                <a class="sanchez" href={`/blog/tags/${tag.toLowerCase()}/`}>
+                <a class="sanchez" href={`/works/tags/${tag.toLowerCase()}/`}>
                   <Pill>{tag}</Pill>
                 </a>
               </li>
