--- a/src/layouts/WorksPost.astro
+++ b/src/layouts/WorksPost.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from './Default.astro';
-import BlogSideBar from '@components/blog/BlogSideBar.astro';
-import BlogContent from '@components/blog/BlogContent.astro';
-import RecentBlogPosts from '@components/generic/RecentBlogPosts.astro';
+import Layout from '@layouts/Default.astro';
+import WorksSideBar from '@components/works/WorkSideBar.astro';
+import WorksContent from '@components/works/WorkContent.astro';
+import RecentWorksPosts from '@components/generic/RecentWorks.astro';
 
 const ogImage = new URL(`/v1/generate/og/${Astro.params.slug}.png`, Astro.url);
 
@@ -16,12 +16,12 @@ const { title, description } = content;
   ogImage={ogImage}
 >
   <main class='p-6 lg:grid lg:grid-cols-3 flex justify-center'>
-    <BlogSideBar headings={headings} />
-    <BlogContent content={content}>
+    <WorksSideBar headings={headings} />
+    <WorksContent content={content}>
       <slot />
-    </BlogContent>
+    </WorksContent>
   </main>
   <section class='p-6'>
-    <RecentBlogPosts count={6} />
+    <RecentWorksPosts count={6} />
   </section>
 </Layout>
