--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-// import RecentBlogPosts from '@components/generic/RecentBlogPosts.astro';
+// import RecentWorksPosts from '@components/generic/RecentWorksPosts.astro';
 import Layout from '@layouts/Default.astro';
 import ErrorPage from '@components/errors/404.astro';
 ---
@@ -12,6 +12,6 @@ import ErrorPage from '@components/errors/404.astro';
 >
   <main class='bg-blue px-6 py-24'>
     <ErrorPage />
-    <!-- <RecentBlogPosts /> -->
+    <!-- <RecentWorksPosts /> -->
   </main>
 </Layout>
