--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/Default.astro';
-import RecentBlogPosts from '@components/generic/RecentBlogPosts.astro';
+import RecentWorks from '@components/generic/RecentWorks.astro';
 import MobileSocials from '@components/home/MobileSocials.astro';
 import { Pill } from '@eliancodes/brutal-ui';
 import { Button } from '@eliancodes/brutal-ui';
@@ -25,38 +25,34 @@ const builtWith = [
 
 <Layout
   title='Home'
-  pageTitle='Brutal Theme | Home'
-  description='Brutal is a minimalistic, neobrutalism theme for Astro.'
+  pageTitle='Pablo Fergus | Home'
+  description='Pablo Fergus.'
 >
   <main class='bg-pink p-6'>
     <MobileSocials />
     <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'>
       <h2 class='hidden'>About Brutal</h2>
-      <div class='col-span-4'>
+      <div class='col-span-2'>
         <Card>
           <div class='flex flex-col justify-between items-start gap-4'>
             <p class='mt-4 outfit text-2xl md:text-5xl lg:text-7xl'>
-              Brutal theme for <a
-                class='text-white'
-                target='_blank'
-                href='https://astro.build/'>Astro</a
-              >
+              Production
             </p>
-            <p class='mt-2 outfit text-xl md:text-3xl lg:text-5xl'>
+            <!-- <p class='mt-2 outfit text-xl md:text-3xl lg:text-5xl'>
               A minimalistic, neobrutalism theme for Astro.
             </p>
             <Button target={'_self'} href='/blog/'>
               Check out the blog &rarr;
-            </Button>
+            </Button> -->
           </div>
         </Card>
       </div>
       <div class='col-span-2'>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 dm-serif'>
-            Brutal is built with
+            Mix/Master
           </h2>
-          <ul class='flex gap-4 flex-wrap'>
+          <!-- <ul class='flex gap-4 flex-wrap'>
             {
               builtWith.map((item) => (
                 <li>
@@ -73,23 +69,36 @@ const builtWith = [
                 </li>
               ))
             }
-          </ul>
+          </ul> -->
         </Card>
       </div>
       <div class='col-span-2'>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
-            What is Brutal?
+            Musical Direction
           </h2>
-          <p class='poppins'>
+          <!-- <p class='poppins'>
             Brutal is a theme built with Astro, UnoCSS by <a
               href='https://www.elian.codes/'>Elian</a
             >. It's a simple, fast, and modern theme that is easy to use and
             customize. Mainly meant to power blogs and personal websites.
-          </p>
+          </p> -->
+        </Card>
+      </div>
+      <div class='col-span-2'>
+        <Card>
+          <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
+            Synths
+          </h2>
+          <!-- <p class='poppins'>
+            Brutal is a theme built with Astro, UnoCSS by <a
+              href='https://www.elian.codes/'>Elian</a
+            >. It's a simple, fast, and modern theme that is easy to use and
+            customize. Mainly meant to power blogs and personal websites.
+          </p> -->
         </Card>
       </div>
     </section>
-    <RecentBlogPosts />
+    <RecentWorks />
   </main>
 </Layout>
