--- a/src/components/layout/BaseFooter.astro
+++ b/src/components/layout/BaseFooter.astro
@@ -36,8 +36,8 @@ const { backToTop = false } = Astro.props;
 <footer class='bg-black text-white p-6'>
   <h2 class='hidden'>Footer</h2>
   <p class='outfit'>
-    LOLOLOLO <a
-      href='https://www.elian.codes/'
+    <a
+      href='https://pablofergus.com'
       target='_blank'
       class='text-blue'>Pablofergus</a
     >
