--- a/src/pages/works/index.astro
+++ b/src/pages/works/index.astro
@@ -8,9 +8,9 @@ const posts = await getCollection('works').then((collection) =>
 ---
 
 <Layout
-  title='Works'
-  description='Brutal Blog | On this page you can find a collection of blogposts'
-  pageTitle='Brutal Blog'
+  title='Credits'
+  description='Pablo Fergus | On this page you can find my credits'
+  pageTitle='Pablo Fergus'
 >
   <main class='bg-green p-6'>
     <WorkList posts={posts} />
