--- a/src/components/generic/RecentWorks.astro
+++ b/src/components/generic/RecentWorks.astro
@@ -14,7 +14,7 @@ const { count } = Astro.props;
 const posts = await getCollection('works').then((posts) =>
   posts.sort((a, b) => (
         a.data.pubDate.getTime() < b.data.pubDate.getTime() ? -1 : 1
-    )).reverse()
+    )).reverse().slice(0, count ?? 8)
 );
 ---
 <!-- .slice(0, count ?? 4) -->
@@ -22,13 +22,13 @@ const posts = await getCollection('works').then((posts) =>
   <Card>
     <div class='flex justify-between items-start'>
       <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 dm-serif'>
-        Recent Works
+        Recent credits
       </h2>
       <div class='hidden md:block'>
-        <Button href='/works/'>Go to works &rarr;</Button>
+        <Button href='/works/'>Go to credits &rarr;</Button>
       </div>
       <div class='block md:hidden'>
-        <Button href='/works/'>to works</Button>
+        <Button href='/works/'>to credits</Button>
       </div>
     </div>
     <WorkList posts={posts} />
