--- a/src/components/works/WorkSummaryCard.astro
+++ b/src/components/works/WorkSummaryCard.astro
@@ -17,13 +17,14 @@ const { post } = Astro.props;
   workUrl={post.data.workUrl}
   imgAlt={post.data.title}
   imgSrc={post.data.imgUrl}
+  description={post.data.description}
 >
   <!-- <div class='flex justify-end my-4'>
     <Button href={`/works/${post.slug}/`}>Read post &rarr;</Button>
   </div> -->
 
   <div class='hidden sm:inline-block'>
-    <p class='poppins mt-2'>tags:</p>
+    <p class='poppins mt-2'>{post.data.description}</p>
     <div class='flex justify-between items-center'>
       <ul class='flex flex-wrap gap-4 mt-2'>
         {
