--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const builtWith = [
       </div>
       <div class='col-span-2'>
         <Card>
-          <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 dm-serif'>
+          <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 righteous'>
             Mix/Master
           </h2>
           <!-- <ul class='flex gap-4 flex-wrap'>
@@ -74,7 +74,7 @@ const builtWith = [
       </div>
       <div class='col-span-2'>
         <Card>
-          <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
+          <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 sanchez'>
             Musical Direction
           </h2>
           <!-- <p class='poppins'>
