--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,19 +7,13 @@ import { Button } from '@eliancodes/brutal-ui';
 import { Card } from '@eliancodes/brutal-ui';
 
 const builtWith = [
-  { name: 'Astro', url: 'https://astro.build/' },
-  { name: 'UnoCSS', url: 'https://uno.antfu.me/' },
-  {
-    name: 'Content Collections',
-    url: 'https://docs.astro.build/en/guides/content-collections/',
-  },
-  { name: 'RSS', url: 'https://docs.astro.build/en/guides/rss/' },
-  {
-    name: 'Sitemap',
-    url: 'https://docs.astro.build/en/guides/integrations-guide/sitemap/',
-  },
-  { name: 'Vercel', url: 'https://vercel.com' },
-  { name: 'TypeScript', url: 'https://www.typescriptlang.org/' },
+  { name: 'Recording', url: 'works/tags/engineering' },
+  { name: 'Editing', url: 'works/tags/' },
+  { name: 'Mixing', url: 'works/tags/mix' },
+  { name: 'Mastering', url: 'works/tags/mastering' },
+  { name: 'Production', url: 'works/tags/production' },
+  { name: 'Musical Direction', url: 'works/tags/musical%20direction/' },
+  { name: 'Synths', url: 'works/tags/synths' },
 ];
 ---
 
@@ -32,27 +26,31 @@ const builtWith = [
     <MobileSocials />
     <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'>
       <h2 class='hidden'>About Pablo Fergus</h2>
-      <div class='col-span-2'>
+      <div class='col-span-3'>
         <Card>
           <div class='flex flex-col justify-between items-start gap-4'>
-            <p class='mt-4 outfit text-2xl md:text-5xl lg:text-7xl'>
-              Production
+            <p class='mt-4 outfit text-2xl md:text-4xl lg:text-6xl'>
+              About
             </p>
-            <!-- <p class='mt-2 outfit text-xl md:text-3xl lg:text-5xl'>
-              A minimalistic, neobrutalism theme for Astro.
+            <p class='mt-2 outfit text-l md:text-3l lg:text-5l'>
+              I am Pablo Fergus, a Madrid-based producer, keyboard player, and mixer. <br/>
+              My credits includes producing for Amaral, Alcalá Norte, Pol Granch and Sexy Zebras, and playing live as MD with Dani Fernández.
             </p>
-            <Button target={'_self'} href='/blog/'>
-              Check out the blog &rarr;
-            </Button> -->
+            <Button target={'_self'} href='/works/'>
+              Check out my credits &rarr;
+            </Button>
           </div>
         </Card>
       </div>
-      <div class='col-span-2'>
+      <div class='col-span-3'>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 righteous'>
-            Mix/Master
+            Services
           </h2>
-          <!-- <ul class='flex gap-4 flex-wrap'>
+          <p class='mt-2 outfit text-l md:text-3l lg:text-5l'>
+            The services I offer include:
+          </p>
+          <ul class='flex gap-4 flex-wrap'>
             {
               builtWith.map((item) => (
                 <li>
@@ -69,10 +67,10 @@ const builtWith = [
                 </li>
               ))
             }
-          </ul> -->
+          </ul>
         </Card>
       </div>
-      <div class='col-span-2'>
+      <!-- <div class='col-span-2'>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 sanchez'>
             Musical Direction
@@ -82,20 +80,19 @@ const builtWith = [
               href='https://www.elian.codes/'>Elian</a
             >. It's a simple, fast, and modern theme that is easy to use and
             customize. Mainly meant to power blogs and personal websites.
-          </p> -->
+          </p> 
         </Card>
-      </div>
+      </div> -->
       <div class='col-span-2'>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
-            Synths
+            Contact
           </h2>
-          <!-- <p class='poppins'>
-            Brutal is a theme built with Astro, UnoCSS by <a
-              href='https://www.elian.codes/'>Elian</a
-            >. It's a simple, fast, and modern theme that is easy to use and
-            customize. Mainly meant to power blogs and personal websites.
-          </p> -->
+          <p class='poppins'>
+            You can contact me on any of social network, or sending an email to <a
+              href='mailto:pablofergus@gmail.com'>pablofergus@gmail.com</a
+            >.
+          </p>
         </Card>
       </div>
     </section>
