Fix margin services

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ const builtWith = [
           <p class='mt-2 outfit text-l md:text-3l lg:text-5l'>
             The services I offer include:
           </p>
-          <ul class='flex gap-4 flex-wrap'>
+          <ul class='mt-2 flex gap-4 flex-wrap'>
             {
               builtWith.map((item) => (
                 <li>
